# 0601-59

./: NAMING_SPEC.md  README.md  pyproject.toml  test_basic.py  test_comprehensive.py  test_overwrite.py
.brand-kit/: config.json
.brand-kit/logs/: 20260608_175122_init.json  20260608_175155_palette.json  20260608_175226_check.json  20260608_175440_rename.json  20260608_175513_undo_rename.json  20260608_183406_rename.json
brand_kit/: cli.py  config.py  logger.py  report.py  utils.py
brand_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brand_kit/commands/: __init__.py  check_cmd.py  import_cmd.py  init_cmd.py  pack_cmd.py  palette_cmd.py  rename_cmd.py  resize_cmd.py  undo_cmd.py
output/palettes/test/: test_blue.json  test_red.json
t_import_dryrun/.brand-kit/logs/: 20260608_190303_init.json
t_import_each/.brand-kit/logs/: 20260608_190302_import.json  20260608_190302_init.json
t_import_flag_enter/: README.md
t_import_flag_enter/.brand-kit/logs/: 20260608_190302_init.json  20260608_190303_import.json
t_import_skip/.brand-kit/logs/: 20260608_190301_import.json  20260608_190301_init.json
t_import_yes/.brand-kit/logs/: 20260608_190301_init.json  20260608_190302_import.json
t_rename_dryrun/.brand-kit/logs/: 20260608_190300_init.json
t_rename_flag_enter/: NAMING_SPEC.md
test_dryrun_tmp/.brand-kit/: config.json
test_project/: .gitignore  NAMING_SPEC.md  README.md
test_project/.brand-kit/: config.json
test_rename_overwrite/: NAMING_SPEC.md  README.md
test_rename_overwrite/.brand-kit/: config.json
(+27 files in other folders)
