[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-kit"
version = "1.0.0"
description = "创意设计平台命令行工具 - 批量整理品牌素材"
authors = [
    {name = "Brand Kit Team"}
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "Pillow>=9.0.0",
    "colorgram.py>=1.2.0",
    "send2trash>=1.8.0",
    "rich>=12.0.0",
]

[project.scripts]
brand-kit = "brand_kit.cli:main"

[tool.setuptools.packages.find]
include = ["brand_kit*"]
